--- a/Source/VSProps/Base.props
+++ b/Source/VSProps/Base.props
@@ -12,13 +12,14 @@
         <OutDir>..\..\..\Binary\$(PlatformName)\</OutDir>
       </PropertyGroup>
     </When>
-    <When Condition="'$(OutputType)'=='Library'">
+    <When Condition="'$(OutputType)'=='StaticLibrary'">
       <PropertyGroup>
         <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
       </PropertyGroup>
     </When>
   </Choose>
   <ItemDefinitionGroup>
+    <!--ClCompile Base-->
     <ClCompile>
       <!--Allow compile-time testing of whether DXSDK (aka DX before integration into VS) is present-->
       <PreprocessorDefinitions Condition="Exists('$(DXSDK_DIR)')">HAVE_DXSDK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -26,20 +27,49 @@
       <WarningLevel>Level3</WarningLevel>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <StructMemberAlignment>16Bytes</StructMemberAlignment>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
+      <MinimalRebuild>false</MinimalRebuild>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <AdditionalOptions>/d2Zi+ /volatile:iso %(AdditionalOptions)</AdditionalOptions>
       <ProgramDataBaseFileName>$(IntDir)$(TargetName).pdb</ProgramDataBaseFileName>
     </ClCompile>
+    <!--ClCompile Debug-->
+    <ClCompile Condition="'$(Configuration)'=='Debug'">
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <PreprocessorDefinitions>_DEBUG;_SECURE_SCL=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <Optimization>Disabled</Optimization>
+    </ClCompile>
+    <!--ClCompile Release-->
+    <ClCompile Condition="'$(Configuration)'=='Release'">
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <OmitFramePointers>true</OmitFramePointers>
+      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
+      <StringPooling>true</StringPooling>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
+      <FunctionLevelLinking>false</FunctionLevelLinking>
+      <PreprocessorDefinitions>_SECURE_SCL=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <!--SSE2 is already the default on x64, setting it explicitly just generates a warning-->
+      <EnableEnhancedInstructionSet Condition="'$(Platform)'=='Win32'">StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+    </ClCompile>
+    <!--Link Base-->
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <!--Link Release-->
+    <Link Condition="'$(Configuration)'=='Release'">
+      <OptimizeReferences>true</OptimizeReferences>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+    </Link>
+    <!--Link for Executable output-->
     <Link Condition="'$(OutputType)'=='Exe'">
         <!--following 3 settings only needed for dolphin itself (not dsptool, etc)-->
         <BaseAddress>0x00400000</BaseAddress>
         <RandomizedBaseAddress>false</RandomizedBaseAddress>
         <FixedBaseAddress>true</FixedBaseAddress>
+        <!--Put libs we link against and do not build as part of the solution here-->
         <AdditionalLibraryDirectories>..\..\..\Externals\SDL\$(PlatformName);..\..\..\Externals\OpenAL\$(PlatformName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
         <AdditionalDependencies>dsound.lib;iphlpapi.lib;winmm.lib;setupapi.lib;vfw32.lib;opengl32.lib;glu32.lib;rpcrt4.lib;comctl32.lib;OpenAL32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       </Link>
