--- a/Source/VSProps/WXWOverrides.props
+++ b/Source/VSProps/WXWOverrides.props
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
+      <ForcedIncludeFiles></ForcedIncludeFiles>
       <PrecompiledHeaderFile>wx/wxprec.h</PrecompiledHeaderFile>
       <ExceptionHandling>Async</ExceptionHandling>
       <DisableSpecificWarnings>4267</DisableSpecificWarnings>
