--- a/Source/DSPTool/DSPTool.vcxproj.filters
+++ b/Source/DSPTool/DSPTool.vcxproj.filters
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="TestData">
       <UniqueIdentifier>{0b70242b-1d98-432f-a60e-d4ca0674852e}</UniqueIdentifier>
@@ -21,5 +21,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\DSPTool.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
 </Project>
