--- a/Source/VSProps/Base.props
+++ b/Source/VSProps/Base.props
@@ -10,8 +10,10 @@
     <BinaryOutputDir>$(BinaryRootDir)$(Platform)\</BinaryOutputDir>
   </PropertyGroup>
   <PropertyGroup>
-    <!--Opt-in to x64 compiler and tools. The environment will default back to x86 if x64 is not usable-->
-    <!--Unfortunately this only seems to work if given on commandline
+    <!--
+    Opt-in to x64 compiler and tools. The environment will default back to x86 if x64 is not usable.
+    Unfortunately we can't set this property here, as it'll be overridden later. Instead, set it
+    from commandline if you're interested in using x64 toolset
     <PreferredToolArchitecture>x64</PreferredToolArchitecture>
     -->
     <IntDir>$(BuildRootDir)$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
