[sqlite-ini] This is just a proof of concept to get some eyes on it. This implements a new system so instead of easy to text edit INI files, instead replace it with a SQLite3 backend. This alone has caused people to not want anything to do with it, but I thought I would create the initial start of it anyway since I want it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -511,6 +511,9 @@ include_directories(Source/Core/VideoUICommon/Src)
 add_subdirectory(Externals/Bochs_disasm)
 include_directories(Externals/Bochs_disasm)
 
+add_subdirectory(Externals/sqlite3)
+include_directories(Externals/sqlite3)
+
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" AND NOT ANDROID)
 	check_lib(LZO lzo2 lzo/lzo1x.h QUIET)
 endif()
