Compile time thread safety checking for clang.
For use in situations where related code is frequently being used from
multiple threads.  Implemented in the NetPlay code in place of the
existing comments like "// called from ---NETPLAY--- thread" - if
you're going to mark up every function anyway, may as well do it in a
way the compiler can verify.

It might be a dumb idea to be using threads for netplay in the first
place, but since the CPU thread blocks on NetPlay and in theory the
GUI thread's performance could be unpredictable, it might be
justified.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,8 +181,8 @@ if(APPLE)
 	set(ENV{PATH} /usr/bin:/bin:/usr/sbin:/sbin)
 
 	# Some of our code contains Objective C constructs.
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -x objective-c -stdlib=libc++")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -x objective-c++ -stdlib=libc++")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -x objective-c -stdlib=libc++ -Werror=thread-safety")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -x objective-c++ -stdlib=libc++ -Werror=thread-safety")
 	# Avoid mistaking an object file for a source file on the link command line.
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -x none")
 
