--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,8 +181,9 @@ if(APPLE)
 	set(ENV{PATH} /usr/bin:/bin:/usr/sbin:/sbin)
 
 	# Some of our code contains Objective C constructs.
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -x objective-c -stdlib=libc++ -Werror=thread-safety")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -x objective-c++ -stdlib=libc++ -Werror=thread-safety")
+	set(CLANG_FLAGS "-stdlib=libc++ -Werror=thread-safety -Werror=thread-safety-beta")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -x objective-c ${CLANG_FLAGS}")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -x objective-c++ ${CLANG_FLAGS}")
 	# Avoid mistaking an object file for a source file on the link command line.
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -x none")
 
