Add a GUI option to get the actual host:port (for your choice of interface).

--- a/Source/Core/DolphinWX/CMakeLists.txt
+++ b/Source/Core/DolphinWX/CMakeLists.txt
@@ -47,6 +47,10 @@ if(LIBAV_FOUND)
 	set(LIBS	${LIBS} ${LIBAV_LIBRARIES})
 endif()
 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+	set(LIBS	${LIBS} ${SYSTEMCONFIGURATION_LIBRARY})
+endif()
+
 if(wxWidgets_FOUND)
 	set(SRCS 
 				Src/ARCodeAddEdit.cpp
