--- a/Source/Core/Core/Core.vcxproj
+++ b/Source/Core/Core/Core.vcxproj
@@ -321,6 +321,8 @@
     <ClCompile Include="Src\HW\WiimoteReal\WiimoteReal.cpp" />
     <ClCompile Include="Src\HW\WII_IOB.cpp" />
     <ClCompile Include="Src\HW\WII_IPC.cpp" />
+    <ClCompile Include="Src\IOSync.cpp" />
+    <ClCompile Include="Src\IOSyncBackends.cpp" />
     <ClCompile Include="Src\IPC_HLE\ICMPWin.cpp" />
     <ClCompile Include="Src\IPC_HLE\WiiMote_HID_Attr.cpp" />
     <ClCompile Include="Src\IPC_HLE\WII_IPC_HLE.cpp" />
@@ -527,6 +529,8 @@
     <ClInclude Include="Src\HW\WiimoteReal\WiimoteRealBase.h" />
     <ClInclude Include="Src\HW\WII_IOB.h" />
     <ClInclude Include="Src\HW\WII_IPC.h" />
+    <ClInclude Include="Src\IOSync.h" />
+    <ClInclude Include="Src\IOSyncBackends.h" />
     <ClInclude Include="Src\IPC_HLE\hci.h" />
     <ClInclude Include="Src\IPC_HLE\fakepoll.h" />
     <ClInclude Include="Src\IPC_HLE\ICMP.h" />
