--- a/Source/Core/Common/Common.vcxproj.filters
+++ b/Source/Core/Common/Common.vcxproj.filters
@@ -36,6 +36,7 @@
     <ClInclude Include="Src\MemoryUtil.h" />
     <ClInclude Include="Src\MsgHandler.h" />
     <ClInclude Include="Src\NandPaths.h" />
+    <ClInclude Include="Src\NetHost.h" />
     <ClInclude Include="Src\SDCardUtil.h" />
     <ClInclude Include="Src\SettingsHandler.h" />
     <ClInclude Include="Src\StdConditionVariable.h" />
